--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@vue/composition-api": "^1.0.0-rc.11",
     "bootstrap": "^5.0.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "formatter": "^0.4.1",
     "router": "^1.3.5",
     "vue": "^2.6.14",
+    "vue-click-outside": "^1.1.0",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
