--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "formatter": "^0.4.1",
+    "moment": "^2.29.1",
     "router": "^1.3.5",
     "vue": "^2.6.14",
     "vue-click-outside": "^1.1.0",
     "vue-moment": "^4.1.0",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuejs-datepicker": "^1.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
