--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-click-outside": "^1.1.0",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1",
+    "vue2-datepicker": "^3.9.1",
     "vuejs-datepicker": "^1.6.2"
   },
   "devDependencies": {
