--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@vue/composition-api": "^1.0.0-rc.11",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
@@ -19,6 +20,7 @@
     "moment": "^2.29.1",
     "router": "^1.3.5",
     "vue": "^2.6.14",
+    "vue-axios": "^3.2.4",
     "vue-click-outside": "^1.1.0",
     "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1",
