--- a/package.json
+++ b/package.json
@@ -1,58 +1,59 @@
 {
-  "name": "misa-cukcuk-vue",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@vue/composition-api": "^1.0.0-rc.11",
-    "axios": "^0.21.1",
-    "bootstrap": "^5.0.1",
-    "bootstrap-vue": "^2.21.2",
-    "core-js": "^3.6.5",
-    "formatter": "^0.4.1",
-    "moment": "^2.29.1",
-    "router": "^1.3.5",
-    "vue": "^2.6.14",
-    "vue-axios": "^3.2.4",
-    "vue-click-outside": "^1.1.0",
-    "vue-moment": "^4.1.0",
-    "vue-router": "^3.5.1",
-    "vue2-datepicker": "^3.9.1",
-    "vuejs-datepicker": "^1.6.2"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "^3.1.1",
-    "@vue/cli-service": "^3.0.5",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
+    "name": "misa-cukcuk-vue",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint"
     },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.3",
+        "@fortawesome/fontawesome-svg-core": "^1.2.35",
+        "@fortawesome/free-solid-svg-icons": "^5.15.3",
+        "@vue/composition-api": "^1.0.0-rc.11",
+        "axios": "^0.21.1",
+        "bootstrap": "^5.0.1",
+        "bootstrap-vue": "^2.21.2",
+        "core-js": "^3.6.5",
+        "formatter": "^0.4.1",
+        "moment": "^2.29.1",
+        "router": "^1.3.5",
+        "vue": "^2.6.14",
+        "vue-axios": "^3.2.4",
+        "vue-click-outside": "^1.1.0",
+        "vue-moment": "^4.1.0",
+        "vue-router": "^3.5.1",
+        "vue2-datepicker": "^3.9.1",
+        "vuejs-datepicker": "^1.6.2",
+        "vuex": "^3.6.2"
     },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-plugin-eslint": "^3.1.1",
+        "@vue/cli-service": "^3.0.5",
+        "babel-eslint": "^10.1.0",
+        "eslint": "^6.7.2",
+        "eslint-plugin-vue": "^6.2.2",
+        "vue-template-compiler": "^2.6.11"
+    },
+    "eslintConfig": {
+        "root": true,
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "plugin:vue/essential",
+            "eslint:recommended"
+        ],
+        "parserOptions": {
+            "parser": "babel-eslint"
+        },
+        "rules": {}
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ]
 }
