--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-click-outside": "^1.1.0",
         "vue-moment": "^4.1.0",
         "vue-router": "^3.5.1",
+        "vue-swal": "^1.0.0",
         "vue2-datepicker": "^3.9.1",
         "vuejs-datepicker": "^1.6.2",
         "vuex": "^3.6.2"
