--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
         "formatter": "^0.4.1",
         "moment": "^2.29.1",
         "router": "^1.3.5",
+        "v-tooltip": "^2.1.3",
         "vue": "^2.6.14",
         "vue-axios": "^3.2.4",
         "vue-click-outside": "^1.1.0",
         "vue-moment": "^4.1.0",
         "vue-router": "^3.5.1",
         "vue-swal": "^1.0.0",
+        "vue-sweetalert2": "^4.3.1",
         "vue2-datepicker": "^3.9.1",
         "vuejs-datepicker": "^1.6.2",
         "vuex": "^3.6.2"
