--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "formatter": "^0.4.1",
         "moment": "^2.29.1",
         "router": "^1.3.5",
+        "sweetalert2": "^10.16.9",
         "v-tooltip": "^2.1.3",
         "vue": "^2.6.14",
         "vue-axios": "^3.2.4",
