--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "moment": "^2.29.1",
         "router": "^1.3.5",
         "sweetalert2": "^10.16.9",
+        "v-autocomplete": "^1.8.2",
         "v-tooltip": "^2.1.3",
         "vue": "^2.6.14",
         "vue-axios": "^3.2.4",
@@ -29,6 +30,7 @@
         "vue-swal": "^1.0.0",
         "vue-sweetalert2": "^4.3.1",
         "vue2-datepicker": "^3.9.1",
+        "vuejs-auto-complete": "^0.9.0",
         "vuejs-datepicker": "^1.6.2",
         "vuex": "^3.6.2"
     },
