--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "vue2-datepicker": "^3.9.1",
         "vuejs-auto-complete": "^0.9.0",
         "vuejs-datepicker": "^1.6.2",
+        "vuejs-datetimepicker": "^1.1.13",
         "vuex": "^3.6.2"
     },
     "devDependencies": {
